# mail-index

./: .gitignore  .gitleaks.toml  .mcpbignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  config.example.json  eslint.config.js  llms.txt  manifest.json  package.json  pnpm-lock.yaml  server.json  tsconfig.json
.github/: SECURITY.md
bench/: README.md  RESULTS-INBOX100.md  RESULTS-USECASES.md  RESULTS.md  accuracy.mjs  gmail-mcp-tools.json  run.mjs
deck/: index.html  present.html  serve.sh
desktop/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/resources/: google-oauth-client.json.example
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ADAPTERS.md  COMPARISON.md  INSTALL.md  MCP.md  PLAN.md  PUBLISHING.md  SCOPE.md  THREAT-MODEL.md  agent-install.md  oauth-and-verification.md
scripts/: bundle.mjs  enable-writes.sh
test/: aggregate.test.ts  cadence.test.ts  classify.test.ts  cli.test.ts  config.test.ts  curate.test.ts  curation.test.ts  db-guard.test.ts  db-path.test.ts  distill.test.ts  domain.test.ts  egress-guard.test.ts  enrich.test.ts  fts.test.ts  gog.test.ts  graph.test.ts  gws.test.ts  images.test.ts  index.test.ts  integration.test.ts  interest.test.ts  labels.test.ts  mcp.test.ts  mutate.test.ts  open.test.ts  reconcile-inbox.test.ts  selfupdate.test.ts  setup.test.ts  show.test.ts  smoke.test.ts  source.test.ts  sync-all.test.ts  sync.test.ts  (+1 more)
(+74 files in other folders)
