[package]
name = "mail-index-desktop"
version = "1.0.0"
description = "Onboarding shell for mail-index"
authors = ["Unsold Group"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mail_index_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Used by `tauri dev` / Tauri's default config.
custom-protocol = ["tauri/custom-protocol"]
